# Evolv

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  reindex_developers.py  test.db
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 041a39dc3083_merge_heads.py  20260707_0001_add_users_email_verification.py  20260707_0001_create_pending_signups.py  20260707_0002_add_email_otp_hash_to_pending_signups.py  20260707_0003_add_users_phone_verified.py  20260707_0004_create_educations.py  20260707_0005_add_email_verification_to_users.py  20260708_0001_drop_users_password_hash.py  20260709_0001_create_messaging.py  20260709_0002_add_users_password_reset_otp.py  20260709_0002_ensure_user_auth_columns.py  20260711_0002_profile_discovery_fields.py  20260711_0003_split_connection_status_enums.py  20260712_0004_google_calendar_credentials.py  20260712_0005_developer_reviews.py  20260712_0006_create_notifications.py  20260715_0001_add_blueprint_version_content_json.py  20260716_0001_drop_blueprint_funding_readiness.py  20260722_0001_add_application_role.py  20260722_0001_create_projects.py  20260722_0002_create_projects.py  20260723_0001_add_notification_preferences.py  20260723_0002_add_projects_blueprint_unique.py  3c1f9a7d2b4e_create_users_and_profiles_tables.py  56521dc74bd8_add_skills_tags_domains.py  8f7ada2c2e12_create_blueprints_tables.py  9f9b07a5d8d6_create_connections.py  a3f6c9d1b2e4_create_applications_and_saved_blueprints.py  ba97c8a9d4b5_create_certifications.py  d4d52f3b9c0b_merge_heads.py  d6f41c36d811_merge_heads.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  error_handlers.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  application.py  blueprint.py  certification.py  connection.py  developer_review.py  google_calendar.py  messaging.py  notification.py  project.py  skill.py  user.py
backend/app/repositories/: __init__.py  domains.py  (+16 more)
backend/supabase/: drop_users_password_hash.sql  schema_recommendations.sql
(+716 files in other folders)
