[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evolv-backend"
version = "0.1.0"
description = "FastAPI backend for Evolv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "cryptography>=42,<47",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "firebase-admin>=6.5,<7.0",
    "httpx>=0.27,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "supabase>=2.10,<2.18.1",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
